--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,38 @@
-amqp==5.3.1
-asgiref==3.8.1
-async-timeout==5.0.1
-billiard==4.2.1
-celery==5.5.2
-certifi==2023.5.7
-channels==4.2.2
-charset-normalizer==3.2.0
-click==8.1.8
-click-didyoumean==0.3.1
-click-plugins==1.1.1
-click-repl==0.3.0
-colorama==0.4.6
-dj-database-url==3.0.0
-Django==5.1.7
-django-modeltranslation==0.19.15
-djangorestframework==3.16.0
-emoji==2.7.0
-et-xmlfile==1.1.0
-gunicorn==23.0.0
-idna==3.4
-kombu==5.5.3
-numpy==1.26.4
-openpyxl==3.1.2
-packaging==25.0
-pandas==2.1.1
-pathlib==1.0.1
-prompt_toolkit==3.0.51
-psycopg2-binary==2.9.10
-pyperclip==1.8.2
-PySimpleGUI==4.60.4
-python-dateutil==2.8.2
-pytz==2023.3.post1
-redis==5.2.1
-requests==2.31.0
-six==1.16.0
-sqlparse==0.5.3
-typing_extensions==4.12.2
-tzdata==2025.2
-urllib3==2.0.3
-vine==5.1.0
-wcwidth==0.2.13
-whitenoise==6.9.0
+amqp==5.3.1                      # для Celery (не трогать)
+asgiref==3.8.1                   # нужно для Django async
+async-timeout==5.0.1            # для Celery + Redis
+billiard==4.2.1                  # Celery зависимость
+celery==5.5.2                    # если используешь очереди задач
+certifi==2023.5.7               # норм, общая зависимость
+channels==4.2.2                  # если используешь WebSocket (иначе можно убрать)
+charset-normalizer==3.2.0       # для requests/DRF
+click==8.1.8                     # норм
+click-didyoumean==0.3.1         # можно убрать
+click-plugins==1.1.1            # можно убрать
+click-repl==0.3.0               # можно убрать
+colorama==0.4.6                  # можно убрать
+dj-database-url==3.0.0          # нужно для подключения БД через .env
+Django==5.1.7                    # главный фреймворк
+django-modeltranslation==0.19.15 # твоя мультиязычность
+djangorestframework==3.16.0     # нужен для API
+emoji==2.7.0                     # опционально (если не юзаешь — убери)
+et-xmlfile==1.1.0                # зависимость openpyxl
+gunicorn==23.0.0                 # запуск Django в проде
+idna==3.4                        # зависимость requests
+kombu==5.5.3                     # celery
+numpy==1.26.4                    # если не юзаешь pandas — не нужен
+openpyxl==3.1.2                  # если не обрабатываешь Excel — убери
+packaging==25.0                 # норм
+pandas==2.1.1                    # если юзаешь таблицы/анализ — оставить
+psycopg2-binary==2.9.10          # для PostgreSQL
+python-dateutil==2.8.2          # pandas зависимость
+pytz==2023.3.post1               # норм
+redis==5.2.1                     # если celery через redis
+requests==2.31.0                 # API запросы
+six==1.16.0                      # зависимость python-dateutil
+sqlparse==0.5.3                  # для Django
+typing_extensions==4.12.2       # норм
+tzdata==2025.2                   # норм
+urllib3==2.0.3                   # норм
+vine==5.1.0                      # celery
+whitenoise==6.9.0                # отдача статики в проде
